--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
     margin: 0px;
     padding: 0px;
     font-family: 'Noto Serif Khojki', serif;
-
+    /* font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif; */
 }
  /* {
     /* overflow-x: hidden; */
@@ -802,6 +802,10 @@ p a {
 
 a {
     text-decoration: none;
+}
+.adminlogin{
+    color: #000000;
+    font-size: large;
 }
 
 /* footer section */
