--- a/assets/css/mybooking.css
+++ b/assets/css/mybooking.css
@@ -114,7 +114,7 @@ ul li a:hover {
 }
 
 .box{
-    background-color: #8bebdd;
+    background-color: rgba(32,56,120,255);
     width: 670px;
     height: 500px;
     display: grid;
@@ -136,7 +136,7 @@ ul li a:hover {
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
     align-items: center;
     cursor: pointer;
-    background-color: rgb(253, 237, 237);
+    background-color: rgb(255, 255, 255);
     color: black;
     position: relative;
     top: 50px;
@@ -218,7 +218,7 @@ ul li a:hover {
     border: none;
     position: relative;
     left: 26%;
-bottom: 20px;
+bottom: 10px;
    
     border-radius: 10%;
 
@@ -260,7 +260,7 @@ bottom: 20px;
     grid-gap: 30px;
     width:160%;
     height: 480px;
-    background-color: rgb(157, 250, 222);
+    background-color: rgba(32,56,120,255);
     position: relative;
     left: 70px;
     border-radius: 10px;
@@ -271,8 +271,9 @@ bottom: 20px;
     width: 210px;
     height: 330px;
     padding: 10px;
-    background-color: #5e6af1;
-    color: white;
+    /* background-color: #5e6af1; */
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
     text-align: center;
     border-radius: 10px;
 }
@@ -299,7 +300,7 @@ flex-direction: column;
 gap: 45px;
 position: relative;
 left: 20px;
-color: #00021a;
+color: #ffffff;
 
 }
 .column2{
@@ -308,7 +309,7 @@ color: #00021a;
     padding:1px;
  display: flex;
  flex-direction: column;
- gap: 21px;
+ gap: 23px;
  position: relative;
  right: 70px;
  }
